# competitive_programming_submission_fetcher

./: .gitignore  1_template.cpp  CMakeLists.txt  README.md  UI.cpp  cli.py  engine.py  problem_cache.json  test.cpp
.cph/: .temp.cpp_bf93deba05e6c8edccd46ae4aca49980.prob
backend/: __init__.py  cli.py
backend/analytics/: __init__.py  engine.py
backend/cache/: __init__.py  manager.py
backend/core/: __init__.py  models.py
backend/fetcher/: __init__.py  codeforces.py
backend/services/: __init__.py  analysis_service.py  fetch_service.py  platform_registry.py
backend/storage/: __init__.py  json_cache.py
cache/: atcoder_difficulties.json  atcoder_problems.json
core/: fetcher.py  readme.py
tui/: CMakeLists.txt
tui/app/: main.cpp
tui/app/state/: AppState.hpp
